# igvc-software

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pep8speaks.yaml  Aaron.txt  Dockerfile  Doxyfile  GPSUtils_8h.html  GPSUtils_8h__incl.map  GPSUtils_8h__incl.md5  GPSUtils_8h_source.html  GraphSearch_8hpp.html  GraphSearch_8hpp__dep__incl.map  GraphSearch_8hpp__dep__incl.md5  GraphSearch_8hpp__incl.map  GraphSearch_8hpp__incl.md5  GraphSearch_8hpp_source.html  IGVC_Full_Dataset.ipynb  Makefile  MergeMasterIntoAll.sh  SearchProblem_8hpp.html  SearchProblem_8hpp__dep__incl.map  SearchProblem_8hpp__dep__incl.md5  SearchProblem_8hpp__incl.map  SearchProblem_8hpp__incl.md5  SearchProblem_8hpp_source.html  SerialPort_8cpp.html  SerialPort_8cpp__incl.map  SerialPort_8cpp__incl.md5  SerialPort_8cpp_source.html  SerialPort_8h.html  SerialPort_8h__dep__incl.map  SerialPort_8h__dep__incl.md5  SerialPort_8h__incl.map  SerialPort_8h__incl.md5  SerialPort_8h_source.html  StringUtils_8hpp.html  StringUtils_8hpp__dep__incl.map  (+642 more)
2009/libarduino/: CMakeLists.txt  pins_arduino.c  wiring.h
2012/software/: CMakeLists.txt  booststuff.txt  softwareNote!!!!.txt  standardPCOpts.cmake
gazebo/igvc_control/: CMakeLists.txt  package.xml
gazebo/igvc_description/: CMakeLists.txt  package.xml
gazebo/igvc_gazebo/: CMakeLists.txt  package.xml
igvc/: CMakeLists.txt  mainpage.dox  package.xml  plugin_description.xml  setup.py
igvc/launch/: bumblebee2.launch  camera.launch  center_camera.launch  center_line_detector.launch  centercamera.launch  centerlinedetector.launch  compressed_to_raw.launch  filter_lidar.launch  flag_detector.launch  gps.launch  igvc.launch  igvc_remote.launch  imu.launch  joystick_driver.launch  lidar.launch  line_detector.launch  localization.launch  map.launch  mapper.launch  mistii.urdf  motor_controller.launch  new_mapper.launch  odometer.launch  pather.launch  pothole_detector.launch  robot_pose_ekf.launch  robot_state_publisher.launch  rosbag.launch  rosbag_sensors.launch  rosbagsensors.launch  rosinit.sh  sensors.launch  side_cameras.launch  side_line_detectors.launch  sidelinedetectors.launch  speed_compare.launch  state_estimator.launch  test.launch  test_motors.launch  test_platform.urdf  (+8 more)
igvc/test/: test_joystick_driver.test  test_pathplanner.test
igvc_demo/: CMakeLists.txt  package.xml
igvc_demo/cmake/: Findpigpio.cmake
igvc_demo/launch/: joystick_controller.launch
igvc_demo/scripts/: joystick.py
igvc_description/: CMakeLists.txt  package.xml
igvc_description/launch/: robot_state_publisher.launch  simulationTesting.launch  spawn_jaymii.launch  spawn_jessii.launch  spawn_swervi.launch
igvc_description/urdf/: gazebo.material  iarrccricuittrack.material  igvc.world  jessi.urdf  jessi.urdf.xacro  jessii.urdf.xacro  swerve_module.urdf.xacro  swervi.urdf  swervi.urdf.xacro  swervi_prop.urdf.xacro
igvc_gazebo/: CMakeLists.txt  package.xml
igvc_gazebo/config/: control_coeffs.yaml  igvc_joint_control.yaml  motor_model.yaml  ramp_lane.csv  swervi_joint_control.yaml  swervi_joint_limits.yaml  waypoints.csv  waypoints_autonav_0.csv  waypoints_autonav_1.csv  waypoints_qual_0.csv  waypoints_qual_1.csv  waypoints_qual_10.csv  waypoints_qual_2.csv  waypoints_qual_3.csv  waypoints_qual_4.csv  waypoints_qual_5.csv  waypoints_qual_6.csv  waypoints_qual_7.csv  waypoints_qual_8.csv  waypoints_qual_9.csv  waypoints_roboracing_lul.csv
igvc_gazebo/igvc_control/: package.xml
igvc_gazebo/launch/: autonav.launch  autonav_low.launch  autonav_mesh.launch  encoders.launch  gazebo.launch  igvc_control.launch  igvc_control_new.launch  motors.launch  qual_low.launch  qualification.launch  ramp_lane.launch  roboracing_lul.launch  sim_detector.launch  simulation.launch  simulation_low.launch  simulation_roboracing_lul.launch  swervi_control.launch
igvc_gazebo/nodes/: CMakeCache.txt
igvc_gazebo/scripts/: drawTexture.py
igvc_msgs/: CMakeLists.txt  package.xml
igvc_msgs/action/: NavigateWaypoint.action
igvc_msgs/msg/: action_path.msg  barrels.msg  igvc_path.msg  lights.msg  map.msg  motor_control.msg  system_stats.msg  trajectory.msg  trajectory_point.msg  velocity_pair.msg  velocity_quad.msg  velocity_triple.msg
igvc_msgs/srv/: BackCircle.srv  fake_cone.msg  fake_cone.srv
igvc_navigation/: CMakeLists.txt  package.xml  setup.py
igvc_navigation/config/: back_circle.yaml  back_up_recovery.yaml  base_local_planner_params.yaml  controllers.yaml  ekf_localization_node_params.yaml  empty_global_costmap_params.yaml  global_costmap_params.yaml  global_costmap_params_jessi.yaml  gridmap_viz.yaml  local_costmap_params.yaml  octomap.yaml  octomap_sim.yaml  planners.yaml  recovery_behaviors.yaml  refactored_local_costmap_params.yaml  swerve_drive.yaml  teb_local_planner_params.yaml
igvc_navigation/launch/: 3D_nav_simulation.launch  action_server.launch  back_circle_server.launch  d_lite_planner.launch  differential_drive.launch  field_d_planner.launch  field_d_simple_test.launch  follower.launch  gridmap_viz.launch  icp.launch  incremental_pather.launch  localization.launch  mapper.launch  mapper_sim.launch  mapper_wrapper.launch  mbf_navigation.launch  navigation_client.launch  navigation_server.launch  navigation_simulation.launch  navigation_simulation_teb.launch  octomap.yaml  octomap_sim.yaml  particle_filter.launch  particle_filter.yaml  path_follower.launch  pather.launch  pose_slam_estimator.launch  refactored_mapper.launch  robot_state_publisher.launch  set_waypoint_file_path.launch  state_estimator.launch  swerve_drive.launch  swerve_wheel_odometry.launch  trajectory_controller.launch  trajectory_controller.yaml  trajectory_planner.launch  waypoint_filter.launch  waypoint_source.launch  wheel_odometry.launch
igvc_navigation/src/: CMakeCache.txt
igvc_perception/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
igvc_platform/: CMakeCache.txt  CMakeLists.txt  package.xml  setup.py
igvc_rviz_plugins/: CMakeLists.txt  CTestTestfile.cmake  HOWTO.md  Makefile  cmake_install.cmake  package.xml  plugin_description.xml
old/bag_utils/: package.xml
(+4121 files in other folders)
