<?xml version="1.0"?>
<package>
  <name>igvc_description</name>
  <version>1.0.0</version>
  <description>
    igvc_description contains the description of the IGVC Jaymii platform
  </description>

  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>BSD</license>

  <author email="jgibson37@gatech.edu">Jason Gibson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>effort_controllers</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_worlds</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>velodyne_simulator</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/urdf/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/urdf/models"/>
  </export>
</package>
