<?xml version="1.0"?>
<package format="2">
  <name>igvc_description</name>
  <version>1.0.0</version>
  <description>
    igvc_description contains the description of the IGVC Jaymii platform
  </description>

  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>BSD</license>

  <author email="jgibson37@gatech.edu">Jason Gibson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>
  <exec_depend>velodyne_description</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/urdf/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/urdf/models"/>
  </export>
</package>
