<?xml version="1.0"?>
<package format="2">
  <name>igvc_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for RoboJackets IGVC</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <maintainer email="chaussee.al@gmail.com">Al Chaussee</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>

  <author email="matthew.barulic@gmail.com">Matthew Barulic</author>
  <author email="chaussee.al@gmail.com">Al Chaussee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
