<?xml version="1.0"?>
<package format="2">
  <name>igvc_navigation</name>
  <version>0.0.0</version>
  <description>The RoboJackets' IGVC code base</description>

  <maintainer email="justin_zheng@gatech.edu">Justin Zheng</maintainer>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>
  <url type="website">http://www.noruts.com</url>

  <author email="matthew.barulic@gmail.com">Matthew Barulic</author>
  <author email="chaussee.al@gmail.com">Al Chaussee</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>robot_localization</depend>
  <depend>pcl_conversions</depend>
  <depend>igvc_msgs</depend>
  <depend>std_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>igvc_utils</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>

  <!-- Run dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>gps_common</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>move_base_flex</exec_depend>

  <test_depend>rostest</test_depend>

  <!-- costmap2d layer pluginlib stuff -->
  <export>
    <costmap_2d plugin="${prefix}/src/mapper/costmap_plugins.xml" />
  </export>
</package>
