<?xml version="1.0"?>
<package>
  <name>igvc_platform</name>
  <version>0.0.0</version>
  <description>The RoboJackets' IGVC code base</description>

  <maintainer email="justin_zheng@gatech.edu">Justin Zheng</maintainer>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>
  <url type="website">http://www.noruts.com</url>

  <author email="matthew.barulic@gmail.com">Matthew Barulic</author>
  <author email="chaussee.al@gmail.com">Al Chaussee</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>serial</build_depend>

  <!-- Run dependencies -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>serial</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
