<?xml version="1.0"?>
<package format="2">
  <name>igvc_platform</name>
  <version>0.0.0</version>
  <description>The RoboJackets' IGVC code base</description>

  <maintainer email="justin_zheng@gatech.edu">Justin Zheng</maintainer>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>
  <url type="website">http://www.noruts.com</url>

  <author email="matthew.barulic@gmail.com">Matthew Barulic</author>
  <author email="chaussee.al@gmail.com">Al Chaussee</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>igvc_msgs</depend>
  <depend>tf</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>igvc_utils</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>libncurses-dev</build_depend>

  <!-- Run dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>gps_common</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <test_depend>rostest</test_depend>
</package>
